# iiwa

./: CMakeLists.txt  package.xml
action/: BinPicking.action
config/: iiwa_config.yaml  iiwa_config_new.yaml  iiwa_control.yaml
gazebo/: gazebo.urdf.xacro
include/iiwa/: binPickingAction_class.h  graspingAction_class.h  state_machine_iiwa_helper.h
launch/: euroc_iiwa.launch  example_manager.launch  iiwa_command_sim.launch  iiwa_control_mode.launch  iiwa_state_machine.launch  remapping_joint_states.launch
meshes/robot/lrmate200id_7l/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
meshes/robot/omnirob/: 1.stl  10.stl  11.stl  12.stl  13.stl  14.stl  15.stl  16.stl  17.stl  18.stl  19.stl  2.stl  3.stl  4.stl  5.stl  6.stl  7.stl  8.stl  9.stl  omnirob_collision.stl
meshes/scene/: conveyors.stl  kontainer_400_300_320.stl
robots/: iiwa.urdf.xacro  logimat_env.urdf.xacro
src/: binPickingAction_class.cpp  client_control.cpp  command_robot_sim.cpp  getContainerPose.cpp  graspingAction_class.cpp  grasping_server.cpp  manager_example.cpp  setting_control_mode.cpp  state_machine_action.txt  state_machine_iiwa.cpp  state_machine_iiwa_helper.cpp  trial.cpp
srv/: GetContainerPose.srv  GetPiecePose.srv  GraspInfo.srv
urdf/: materials.urdf.xacro
urdf/robot/iiwa/: lbr_iiwa.transmission.xacro  lbr_iiwa.urdf.xacro  lbr_iiwa.xacro
urdf/robot/lrmate200id_7l/: lrmate200id_7l.urdf.xacro
urdf/robot/miiwa/: mast.urdf.xacro
urdf/robot/omnirob/: omnirob.gazebo.xacro  omnirob.transmission.xacro  omnirob.urdf.xacro
urdf/scene/: container.urdf.xacro  conveyors.urdf.xacro
urdf/sensors/camera/kinect/: kinect_camera.gazebo.xacro  kinect_camera.urdf.xacro
urdf/sensors/laser/: hokuyo_utm30lx.urdf.xacro
urdf/tool/gripper/gripper_camera_connector/: gripper.gazebo.xacro  gripper.transmission.xacro  gripper.urdf.xacro  gripper_camera_connector.urdf.xacro
urdf/tool/gripper/mako_3d/: mako_3d.gazebo.xacro  mako_3d.urdf.xacro  mako_3d_standalone.urdf.xacro
urdf/tool/gripper/schunk_adapter/: schunk_adapter.gazebo.xacro  schunk_adapter.urdf.xacro  schunk_adapter_standalone.urdf.xacro
urdf/tool/gripper/schunk_wsg50/: schunk_wsg50.gazebo.xacro  schunk_wsg50.transmission.xacro  schunk_wsg50.urdf.xacro  schunk_wsg50_standalone.urdf.xacro
